--- a/Security/Guidelines/Web_Security.mediawiki
+++ b/Security/Guidelines/Web_Security.mediawiki
@@ -329,31 +329,38 @@ Note that disabling inline JavaScript means that <em>all</em> JavaScript must be
 
 * Aiming for <tt>default-src: https:</tt> is a great first goal, as it disables inline code and requires https.
 * For existing websites with large codebases that would require too much work to disable inline scripts, <tt>default-src: https: 'unsafe-inline'</tt> is still helpful, as it keeps resources from being accidentally loaded over http. However, it does not provide any XSS protection.
-* Sites that want to go further are recommended to start with a reasonably locked down policy such as <tt>default-src 'none'; connect-src 'self'; img-src 'self'; script-src 'self'; style-src 'self'</tt> and then add in remote sources as revealed during testing.
+* It recommended to start with a reasonably locked down policy such as <tt>default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self'</tt> and then add in sources as revealed during testing.
 * In lieu of the preferred HTTP header, pages can instead include a <tt>&lt;meta http-equiv="Content-Security-Policy" content="&hellip;"&gt;</tt> tag. If they do, it should be the first <tt>&lt;meta&gt;</tt> tag that appears inside <tt>&lt;head&gt;</tt>.
-* Care needs to be taken with <tt>blob:</tt> and <tt>data:</tt> URIs, as these are not covered by 'self' and need to be included in the CSP declaration
+* Care needs to be taken with <tt>data:</tt> URIs, as these as unsafe inside <tt>script-src</tt> (or inherited from <tt>default-src</tt>).
+* Similarly, the use of <tt>script-src 'self'</tt> can be unsafe for sites with JSONP endpoints. These sites should use a <tt>script-src</tt> that includes the path to their JavaScript source folder(s).
+* Unless sites need the ability to execute plugins such as Flash or Silverlight, they should disable their execution with <tt>object-src 'none'</tt>.
 * Sites should ideally use the <tt>report-uri</tt> directive, which POSTs JSON reports about CSP violations that do occur. This allows CSP violations to be caught and repaired quickly.
 * Prior to implementation, it is recommended to use the <tt>Content-Security-Policy-Report-Only</tt> HTTP header, to see if any violations would have occured with that policy.
 
 == Examples ==
 
-<pre># Disable unsafe inline/eval, only allow loading of resources (images, fonts, scripts, etc.) over https (recommended)
+<pre># Disable unsafe inline/eval, only allow loading of resources (images, fonts, scripts, etc.) over https
+# Note that this does not provide any XSS protection
 Content-Security-Policy: default-src https:</pre>
 
 <pre>&lt;-- Do the same thing, but with a <meta> tag --&gt;
 <meta http-equiv="Content-Security-Policy" content="default-src https:"></pre>
 
-<pre># Disable the use of unsafe inline/eval, allow everything else
-Content-Security-Policy: *</pre>
+<pre># Disable the use of unsafe inline/eval, allow everything else plugin execution
+Content-Security-Policy: default-src *; object-src 'none'</pre>
 
-<pre># Disable unsafe inline/eval, only load resources from same origin, except also allow images on imgur
-Content-Security-Policy: default-src 'self'; img-src 'self' https://i.imgur.com</pre>
+<pre># Disable unsafe inline/eval, only load resources from same origin except also allow images from imgur
+# Also disables the execution of plugins
+Content-Security-Policy: default-src 'self'; img-src 'self' https://i.imgur.com; object-src 'none'</pre>
 
-<pre># Disable unsafe inline/eval, only load resources from same origin, fonts from google, images from same origin and imgur
-Content-Security-Policy: default-src 'self'; font-src 'https://fonts.googleapis.com'; img-src 'self' https://i.imgur.com</pre>
+<pre># Disable unsafe inline/eval, only load scripts and stylesheets from same origin, fonts from google, and images from
+# same origin and imgur. Sites should aim for policies like this.
+Content-Security-Policy: default-src 'none'; font-src 'https://fonts.googleapis.com';
+                             img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'</pre>
 
-<pre># Pre-existing site uses too much inline code to fix, but wants to ensure resources are loaded only over https
-Content-Security-Policy: default-src https: 'unsafe-eval' 'unsafe-inline'</pre>
+<pre># Pre-existing site uses too much inline code to fix,
+# but wants to ensure resources are loaded only over https and disable plugins
+Content-Security-Policy: default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'</pre>
 
 <pre># Don't implement the above policy yet; instead just report violations that would have occured
 Content-Security-Policy-Report-Only: default-src https:; report-uri /csp-violation-report-endpoint/</pre>
@@ -658,6 +665,10 @@ X-XSS-Protection: 1; mode=block</pre>
 ! scope="col" style="width: 8em;" | Date
 ! scope="col" style="width: 6em;" | Editor
 ! Changes
+|-
+| style="padding-left: .5em; text-align: left;" | October, 2016
+| align="center" | April
+| style="padding-left: .5em;" | Updates to CSP recommendations
 |-
 | style="padding-left: .5em; text-align: left;" | July, 2016
 | align="center" | April
